<resources>
    <string name="app_name">UserFeedBack</string>
    <string name="str_register">Register</string>
    <string name="str_forgot_password">Forgot Password ?</string>
    <string name="str_username">Username</string>
    <string name="str_password">Password</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="skintone">Skin Tone</string>
    <string name="age">Age</string>
    <string name="date">Date</string>
    <string name="filter">Apply</string>
    <string name="surveyOverview">Survey Overview</string>
    <string name="filteryoursearch">Filter Your Search</string>
    <string name="categoryList">Category List</string>
    <string name="comment">Comments</string>
    <string name="add">Add</string>
    <string name="no_internet_connection">Please enable internet connection.</string>
    <string name="err_username">Enter username</string>
    <string name="err_password">Enter password</string>
    <string name="please_wait">Please wait</string>
    <string name="reset">Reset</string>
    <string name="Filter">Filter</string>
    <string name="AddNote">Add Note</string>
</resources>
