<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    android:padding="@dimen/_10sdp">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/gender"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12sdp" />

    <RadioGroup
        android:id="@+id/input_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/male" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:text="@string/female" />
    </RadioGroup>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/skintone"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/input_skinTone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:background="@drawable/textview_background_stroke"
        android:padding="@dimen/_3sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/age"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/input_Age"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:background="@drawable/textview_background_stroke"
        android:padding="@dimen/_3sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/date"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12sdp" />

    <TextView
        android:id="@+id/input_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:background="@drawable/textview_background_stroke"
        android:drawableRight="@drawable/ic_calendar"
        android:gravity="center|left"
        android:padding="@dimen/_10sdp"
        android:textSize="@dimen/_12sdp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/button_backgroung_red"
        android:text="@string/filter"
        android:textAllCaps="false"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14sdp" />


</LinearLayout>