<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <include layout="@layout/activity_toolbar" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/categoryList"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/input_categoryList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:drawablePadding="@dimen/_2sdp"
        android:background="@drawable/textview_background_stroke"
        android:drawableRight="@drawable/ic_dropdown"
        android:padding="@dimen/_5sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/date"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/input_date"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:background="@drawable/textview_background_stroke"
        android:drawableRight="@drawable/ic_calendar"
        android:padding="@dimen/_3sdp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/comment"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/input_comments"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_3sdp"
        android:background="@drawable/textview_background_stroke"
        android:minLines="5"
        android:padding="@dimen/_3sdp" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/button_background_red_stroke"
        android:text="@string/add"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_12sdp" />

</LinearLayout>