<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:gravity="center"
    android:orientation="vertical">


    <TextView
        android:layout_width="@dimen/_100sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_gravity="center"
        android:background="@drawable/button_background_red_stroke"
        android:gravity="center"
        android:text="Logo"
        android:textAllCaps="true"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_16sdp" />

    <EditText
        android:id="@+id/input_username"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/edittext_background_red_stroke"
        android:drawableRight="@drawable/ic_user"
        android:hint="@string/str_username"
        android:inputType="text"
        android:padding="@dimen/_5sdp"
        android:textSize="@dimen/_10sdp" />

    <EditText
        android:id="@+id/input_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/edittext_background_red_stroke"
        android:drawableRight="@drawable/ic_password"
        android:fontFamily="sans-serif"
        android:hint="@string/str_password"
        android:inputType="textPassword"
        android:padding="@dimen/_5sdp"
        android:textSize="@dimen/_10sdp" />


    <Button
        android:id="@+id/input_login"
        android:layout_width="@dimen/_100sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@color/colorPrimary"
        android:text="Login"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/_2sdp">

        <TextView
            android:id="@+id/input_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" / "
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp" />

        <TextView
            android:id="@+id/input_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_forgot_password"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>
</LinearLayout>